[FIXUP] Notification Tooltip is not responsive (https://github.com/FrontEnd-ro/frontend.ro/issues/394)

--- a/client/components/notification-tooltip/NotificationTooltip.module.scss
+++ b/client/components/notification-tooltip/NotificationTooltip.module.scss
@@ -7,6 +7,7 @@
   top: 100%;
   right: 0;
   width: 20em;
+  max-width: 100vw;
   height: 15em;
   overflow-y: auto;
   max-width: 100vw;
